fix description visibility and spelling

--- a/web/src/css/available-spaces.scss
+++ b/web/src/css/available-spaces.scss
@@ -122,8 +122,11 @@ main {
 		font-weight: bold;
 		text-align: center;
 		margin: 20px auto;
+		padding: 20px;
 		max-width: 800px;
 		text-shadow: -1px -1px 0 white, 1px -1px 0 white, -1px 1px 0 white, 1px 1px 0 white;
+		background: var(--white);
+		border-radius: 5px;
 	}
 
 	.section {
